cis-perf/yaml/zone3/40-ns-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3100
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3100.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3101
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3101.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3102
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3102.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3103
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3103.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3104
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3104.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3105
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3105.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3106
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3106.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3107
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3107.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3108
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3108.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3109
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3109.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3110
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3110.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3111
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3111.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3112
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3112.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3113
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3113.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3114
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3114.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3115
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3115.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3116
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3116.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3117
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3117.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3118
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3118.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3119
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3119.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3120
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3120.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3121
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3121.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3122
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3122.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3123
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3123.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3124
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3124.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3125
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3125.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3126
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3126.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3127
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3127.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3128
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3128.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3129
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3129.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3130
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3130.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3131
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3131.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3132
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3132.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3133
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3133.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3134
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3134.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3135
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3135.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3136
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3136.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3137
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3137.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3138
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3138.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3139
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3139.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
